--- a/.github/workflows/jpf.yml
+++ b/.github/workflows/jpf.yml
@@ -25,8 +25,13 @@ jobs:
         cache: maven
 
     - name: Build project with JDK 17
-      run: mvn clean install -DskipTests
+      if: ${{ runner.os == 'Linux' || runner.os == 'macOS' }}
+      run: mvn clean install -DskipTests 
 
+    - name: Build project with JDK 17
+      if: runner.os == 'Windows'
+      run: mvn clean install spring-javaformat:apply
+      
     - name: Set up JDK 11 for JPF
       uses: actions/setup-java@v3
       with:
