--- a/.github/workflows/jpf.yml
+++ b/.github/workflows/jpf.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-22.04, macos-latest, windows-latest]
+        os: [ubuntu-22.04, macos-latest]
 
     steps:
     - name: Checkout repository
@@ -27,10 +27,6 @@ jobs:
     - name: Build project with JDK 17
       if: ${{ runner.os == 'Linux' || runner.os == 'macOS' }}
       run: mvn clean install -DskipTests 
-
-    - name: Build project with JDK 17
-      if: runner.os == 'Windows'
-      run: mvn clean install spring-javaformat:apply
       
     - name: Set up JDK 11 for JPF
       uses: actions/setup-java@v3
@@ -79,55 +75,9 @@ jobs:
             $command > "./jpf_reports/${safe_main_class}_jpf_report.txt"
         done
 
-    - name: Run JPF on JAR files
-      continue-on-error: true
-      if: runner.os == 'Windows'
-      shell: cmd 
-      run: | 
-        @echo off
-        setlocal enabledelayedexpansion
-        
-        mkdir jpf_reports
-        
-        set "directory=%cd%"
-        set "runjpf_jar=C:\path\to\jpf-core\build\RunJPF.jar"
-        
-        for /r %%i in (*.jar) do (
-            echo %%i | findstr /i "SNAPSHOT" >nul 2>&1
-            if !errorlevel! neq 0 (
-                jar tf "%%i" | findstr /i "META-INF\MANIFEST.MF" >nul 2>&1
-                if !errorlevel! equ 0 (
-                    mkdir META-INF 2>nul
-                    jar xf "%%i" META-INF/MANIFEST.MF
-                    if exist META-INF\MANIFEST.MF (
-                        for /f "tokens=2 delims=: " %%j in ('findstr /i "Main-Class" META-INF\MANIFEST.MF') do (
-                            set "main_class=%%j"
-                            set "main_class=!main_class: =!"
-                            set "main_class=!main_class:"=!%%"
-                            
-                            echo !main_class! | findstr /i /r "org\.springframework\|io\.quarkus" >nul 2>&1
-                            if !errorlevel! neq 0 (
-                                java -jar "%runjpf_jar%" +classpath="%%i" !main_class! > "jpf_reports\!main_class!_jpf_report.txt"
-                            )
-                        )
-                    )
-                    rmdir /s /q META-INF
-                )
-            )
-        )
-        
-        endlocal
-
     - name: Upload JPF reports
       if: ${{ runner.os == 'Linux' || runner.os == 'macOS' }}
       uses: actions/upload-artifact@v4
       with:
         name: jpf-report-${{ github.event.repository.name}}-on-${{ matrix.os }}-from_branch_${{ github.ref_name }}
         path: './jpf_reports/*'
-
-    - name: Upload JPF reports
-      if: ${{ runner.os == 'Windows' }}
-      uses: actions/upload-artifact@v4
-      with:
-        name: jpf-report-${{ github.event.repository.name }}-on-${{ matrix.os }}-from_branch_${{ github.ref_name }}
-        path: 'jpf_reports'
